refactor: Compact services and controllers to reduce PR diff size